--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "scripts": {
     "dev": "nodemon app.js",
     "start": "serve -s build",
+    "heroku-postbuild": "npm run build",
     
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
   },
   "keywords": [
     "node",
