--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon app.js",
     "start": "serve -s build",
-    "heroku-postbuild": "npm run build",
+    "heroku-postbuild": "npm run build"
     
   },
   "keywords": [
